traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: type mismatch;
 found   : Unit
 required: Boolean
      if(estFaceMur==true){
      ^Snake:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if(getDirection()==Direction.EST){
    ^Snake:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
                        ^Snake:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
    ^