traversal.snake.Snake.scala.code

override def run() {
  def murN:Boolean={
    if(getDirection()==Direction.EST){
      retourne()
      if(estFaceMur==true){
        return true
      }
    }
  }
  def fini:Boolean ={
    if(estFaceMur==true){
      
    }
  }
}